--- a/patterns/admin-panel/index.html
+++ b/patterns/admin-panel/index.html
@@ -13,132 +13,150 @@
 
   <div slot="header-start"></div>
 
-  <div slot="header-end">
-    <p-button icon="search" variant="ghost" compact="true" hide-label="true" onclick="document.querySelector('p-flyout#search').open = true;"
-    >Open search
-    </p-button>
-  </div>
+  <p-button
+    slot="header-end"
+    icon="search"
+    variant="ghost"
+    compact="true"
+    hide-label="true"
+    onclick="document.querySelector('p-flyout#search').open = true;"
+  >Open search
+  </p-button>
 
-  <div class="-col-span-full-1 -flex -items-center -gap-static-medium">
-    <p-heading size="x-large" tag="h1">Porsche Models</p-heading>
-    <p-button type="button" compact="true">Add model</p-button>
-  </div>
+  <p-button
+    slot="header-end"
+    icon="user"
+    variant="ghost"
+    compact="true"
+    hide-label="true"
+    onclick="document.querySelector('p-canvas').sidebarEndOpen = true;"
+  >Open sidebar
+  </p-button>
 
-  <div class="-col-span-full-1 -mt-fluid-large">
-    <p-tabs-bar active-tab-index="0">
-      <button type="button">Overview</button>
-      <button type="button">Drafts</button>
-    </p-tabs-bar>
-  </div>
+  <div class="-p-canvas-grid">
 
-  <div class="-col-span-full-1 -mt-fluid-medium">
-    <p-button variant="ghost" type="button" compact="true" icon="filter">Filter</p-button>
-  </div>
 
-  <div class="-col-span-full-1 -mt-fluid-small">
-    <p-table>
-      <p-table-head>
-        <p-table-head-row>
-          <p-table-head-cell>Model</p-table-head-cell>
-          <p-table-head-cell>Interest</p-table-head-cell>
-          <p-table-head-cell>VIN</p-table-head-cell>
-          <p-table-head-cell>Purchase Intention</p-table-head-cell>
-          <p-table-head-cell>Status</p-table-head-cell>
-          <p-table-head-cell>Comment</p-table-head-cell>
-          <p-table-head-cell>Lead ID</p-table-head-cell>
-          <p-table-head-cell>Action</p-table-head-cell>
-        </p-table-head-row>
-      </p-table-head>
-      <p-table-body>
-        <p-table-row>
-          <p-table-cell>
-            <img
-              src="https://porsche-design-system.github.io/dummyasset/718.png"
-              width="80"
-              height="45"
-              alt="Some image description"
-              style="object-fit: contain"
-            />
-          </p-table-cell>
-          <p-table-cell>New Car</p-table-cell>
-          <p-table-cell>
-            <a href="https://porsche.com">1FM5K7F84FGB16304</a>
-          </p-table-cell>
-          <p-table-cell>08/2021</p-table-cell>
-          <p-table-cell>Won</p-table-cell>
-          <p-table-cell multiline="true" style="min-width: 10rem">-</p-table-cell>
-          <p-table-cell>0000824402 <p-popover description="Some additional content."></p-popover></p-table-cell>
-          <p-table-cell>
-            <div class="-flex -gap-static-medium">
-              <p-button-pure icon="edit">Edit</p-button-pure>
-              <p-button-pure icon="delete">Delete</p-button-pure>
-            </div>
-          </p-table-cell>
-        </p-table-row>
-        <p-table-row>
-          <p-table-cell>
-            <img
-              src="https://porsche-design-system.github.io/dummyasset/911.png"
-              width="80"
-              height="45"
-              alt="Some image description"
-              style="object-fit: contain"
-            />
-          </p-table-cell>
-          <p-table-cell>Used Car</p-table-cell>
-          <p-table-cell>
-            <a href="https://porsche.com">5GAKVCKD8EJ335750</a>
-          </p-table-cell>
-          <p-table-cell>09/2021</p-table-cell>
-          <p-table-cell>Won</p-table-cell>
-          <p-table-cell multiline="true" style="min-width: 10rem">-</p-table-cell>
-          <p-table-cell>0000824408 <p-popover description="Some additional content."></p-popover></p-table-cell>
-          <p-table-cell>
-            <div class="-flex -gap-static-medium">
-              <p-button-pure icon="edit">Edit</p-button-pure>
-              <p-button-pure icon="delete">Delete</p-button-pure>
-            </div>
-          </p-table-cell>
-        </p-table-row>
-      </p-table-body>
-    </p-table>
-  </div>
+    <div class="-col-span-full-1 -flex -items-center -gap-static-medium">
+      <p-heading size="x-large" tag="h1">Porsche Models</p-heading>
+      <p-button type="button" compact="true">Add model</p-button>
+    </div>
 
-  <div class="list -col-span-full-1 -mt-fluid-large">
-    <div class="list__item">
-      <p-heading size="medium" tag="h4">Your Favorites</p-heading>
-      <div class="list__anchors">
-        <p-link-pure href="#">New Relic</p-link-pure>
-        <p-link-pure href="#">Bise</p-link-pure>
-        <p-link-pure href="#">AWS</p-link-pure>
-        <p-link-pure href="#">GRBX Integration Manager</p-link-pure>
-        <p-link-pure href="#">Cloud Documentation</p-link-pure>
+    <div class="-col-span-full-1 -mt-fluid-large">
+      <p-tabs-bar active-tab-index="0">
+        <button type="button">Overview</button>
+        <button type="button">Drafts</button>
+      </p-tabs-bar>
+    </div>
+
+    <div class="-col-span-full-1 -mt-fluid-medium">
+      <p-button variant="ghost" type="button" compact="true" icon="filter">Filter</p-button>
+    </div>
+
+    <div class="-col-span-full-1 -mt-fluid-small">
+      <p-table>
+        <p-table-head>
+          <p-table-head-row>
+            <p-table-head-cell>Model</p-table-head-cell>
+            <p-table-head-cell>Interest</p-table-head-cell>
+            <p-table-head-cell>VIN</p-table-head-cell>
+            <p-table-head-cell>Purchase Intention</p-table-head-cell>
+            <p-table-head-cell>Status</p-table-head-cell>
+            <p-table-head-cell>Comment</p-table-head-cell>
+            <p-table-head-cell>Lead ID</p-table-head-cell>
+            <p-table-head-cell>Action</p-table-head-cell>
+          </p-table-head-row>
+        </p-table-head>
+        <p-table-body>
+          <p-table-row>
+            <p-table-cell>
+              <img
+                src="https://porsche-design-system.github.io/dummyasset/718.png"
+                width="80"
+                height="45"
+                alt="Some image description"
+                style="object-fit: contain"
+              />
+            </p-table-cell>
+            <p-table-cell>New Car</p-table-cell>
+            <p-table-cell>
+              <a href="https://porsche.com">1FM5K7F84FGB16304</a>
+            </p-table-cell>
+            <p-table-cell>08/2021</p-table-cell>
+            <p-table-cell>Won</p-table-cell>
+            <p-table-cell multiline="true" style="min-width: 10rem">-</p-table-cell>
+            <p-table-cell>0000824402
+              <p-popover description="Some additional content."></p-popover>
+            </p-table-cell>
+            <p-table-cell>
+              <div class="-flex -gap-static-medium">
+                <p-button-pure icon="edit">Edit</p-button-pure>
+                <p-button-pure icon="delete">Delete</p-button-pure>
+              </div>
+            </p-table-cell>
+          </p-table-row>
+          <p-table-row>
+            <p-table-cell>
+              <img
+                src="https://porsche-design-system.github.io/dummyasset/911.png"
+                width="80"
+                height="45"
+                alt="Some image description"
+                style="object-fit: contain"
+              />
+            </p-table-cell>
+            <p-table-cell>Used Car</p-table-cell>
+            <p-table-cell>
+              <a href="https://porsche.com">5GAKVCKD8EJ335750</a>
+            </p-table-cell>
+            <p-table-cell>09/2021</p-table-cell>
+            <p-table-cell>Won</p-table-cell>
+            <p-table-cell multiline="true" style="min-width: 10rem">-</p-table-cell>
+            <p-table-cell>0000824408
+              <p-popover description="Some additional content."></p-popover>
+            </p-table-cell>
+            <p-table-cell>
+              <div class="-flex -gap-static-medium">
+                <p-button-pure icon="edit">Edit</p-button-pure>
+                <p-button-pure icon="delete">Delete</p-button-pure>
+              </div>
+            </p-table-cell>
+          </p-table-row>
+        </p-table-body>
+      </p-table>
+    </div>
+
+    <div class="list -col-span-full-1 -mt-fluid-large">
+      <div class="list__item">
+        <p-heading size="medium" tag="h4">Your Favorites</p-heading>
+        <div class="list__anchors">
+          <p-link-pure href="#">New Relic</p-link-pure>
+          <p-link-pure href="#">Bise</p-link-pure>
+          <p-link-pure href="#">AWS</p-link-pure>
+          <p-link-pure href="#">GRBX Integration Manager</p-link-pure>
+          <p-link-pure href="#">Cloud Documentation</p-link-pure>
+        </div>
+      </div>
+      <div class="list__item">
+        <p-heading size="medium" tag="h4">Most Suggested</p-heading>
+        <div class="list__anchors">
+          <p-link-pure href="#">Grafana</p-link-pure>
+          <p-link-pure href="#">New Relic</p-link-pure>
+          <p-link-pure href="#">BISE Scanners</p-link-pure>
+          <p-link-pure href="#">Integration Manager</p-link-pure>
+          <p-link-pure href="#">Prisma Cloud</p-link-pure>
+        </div>
+      </div>
+      <div class="list__item">
+        <p-heading size="medium" tag="h4">Quick Links</p-heading>
+        <div class="list__anchors">
+          <p-link-pure href="#">Tools & Services</p-link-pure>
+          <p-link-pure href="#">Quick Guide</p-link-pure>
+          <p-link-pure href="#">Integration Manager</p-link-pure>
+          <p-link-pure href="#">Confluence</p-link-pure>
+          <p-link-pure href="#">News</p-link-pure>
+        </div>
       </div>
     </div>
-    <div class="list__item">
-      <p-heading size="medium" tag="h4">Most Suggested</p-heading>
-      <div class="list__anchors">
-        <p-link-pure href="#">Grafana</p-link-pure>
-        <p-link-pure href="#">New Relic</p-link-pure>
-        <p-link-pure href="#">BISE Scanners</p-link-pure>
-        <p-link-pure href="#">Integration Manager</p-link-pure>
-        <p-link-pure href="#">Prisma Cloud</p-link-pure>
-      </div>
-    </div>
-    <div class="list__item">
-      <p-heading size="medium" tag="h4">Quick Links</p-heading>
-      <div class="list__anchors">
-        <p-link-pure href="#">Tools & Services</p-link-pure>
-        <p-link-pure href="#">Quick Guide</p-link-pure>
-        <p-link-pure href="#">Integration Manager</p-link-pure>
-        <p-link-pure href="#">Confluence</p-link-pure>
-        <p-link-pure href="#">News</p-link-pure>
-      </div>
-    </div>
-  </div>
-
-  <div slot="footer" class="-col-span-full-1">
-    <p-text color="contrast-medium" size="xx-small">© 2024 Dr. Ing. h.c. F. Porsche AG</p-text>
   </div>
 
   <div slot="sidebar-start">
@@ -173,7 +191,9 @@
     <p-divider></p-divider>
     <p-link-pure href="#" icon="configurate">Settings</p-link-pure>
     <p-switch class="-mt-fluid-x-small" id="theme-switch" align-label="start" stretch="true">
-      <p-icon name="moon"> </p-icon> Dark Mode</p-switch
+      <p-icon name="moon"></p-icon>
+      Dark Mode
+    </p-switch
     >
   </div>
 </p-canvas>
@@ -185,7 +205,7 @@
 >
   <p-display size="small" tag="h2">What are you looking for?</p-display>
   <p-text-field-wrapper class="-mt-fluid-medium" label="Search" hide-label="true">
-    <input type="search" name="some-name" placeholder="Some placeholder" />
+    <input type="search" name="some-name" placeholder="Some placeholder"/>
   </p-text-field-wrapper>
 </p-flyout>
 
