feat: update co-driver template | sas

--- a/patterns/co-driver/index.html
+++ b/patterns/co-driver/index.html
@@ -238,7 +238,7 @@
     </div>
   </div>
 
-  <video slot="background" src="assets/bg.webm" loop muted autoplay aria-hidden="true"></video>
+  <video slot="background" src="assets/bg.mp4" loop muted autoplay aria-hidden="true"></video>
 
   <template id="template-intro">
     <div class="-p-canvas-grid">
