--- a/patterns/co-driver/index.html
+++ b/patterns/co-driver/index.html
@@ -238,7 +238,10 @@
     </div>
   </div>
 
-  <video slot="background" src="assets/bg.mp4" loop muted autoplay aria-hidden="true"></video>
+  <video slot="background" poster="assets/bg.webp" loop muted autoplay playsinline aria-hidden="true">
+    <source src="assets/bg.webm" type="video/webm">
+    <source src="assets/bg.mp4" type="video/mp4">
+  </video>
 
   <template id="template-intro">
     <div class="-p-canvas-grid">
