drive-voucher: minor a11y improvements | oh

--- a/patterns/drive-voucher/index.html
+++ b/patterns/drive-voucher/index.html
@@ -25,7 +25,7 @@
     <section class="order" aria-labelledby="order-button">
       <div class="order__section">
         <div>
-          <p-heading size="large" theme="dark">Gutscheinbetrag</p-heading>
+          <p-heading size="large" theme="dark" tag="h2">Gutscheinbetrag</p-heading>
           <p-text size="small" color="contrast-medium" theme="dark">Der Betrag wird dem Porsche Geschenkgutschein hinzugefügt.</p-text>
         </div>
         <div class="voucher box">
@@ -80,13 +80,13 @@
             <label for="voucher-amount" class="sr-only">Amount: </label>
             <input type="number" name="voucher-amount" id="voucher-amount" placeholder="000" />
             <p-display size="small" theme="dark">.00 €</p-display>
-            <p-text size="x-small" align="center" color="contrast-low" theme="dark">Mindestbetrag 30.00€</p-text>
+            <p-text size="x-small" align="center" color="contrast-medium" theme="dark">Mindestbetrag 30.00€</p-text>
           </div>
         </div>
       </div>
       <div class="order__section">
         <div>
-          <p-heading size="large" theme="dark">Personalisierung</p-heading>
+          <p-heading size="large" theme="dark" tag="h2">Personalisierung</p-heading>
           <p-text size="small" color="contrast-medium" theme="dark">Fügen Sie eine optionale Nachricht zum Geschenkgutschein hinzu. Hier finden Sie ein <a href="/">Beispiel</a></p-text>
         </div>
         <div class="box">
@@ -96,20 +96,20 @@
           <p-textarea theme="dark" name="message" label="Persönliche Nachricht" placeholder="Ich möchte dir dieses besondere Erlebnis schenken." max-length="248"></p-textarea>
         </div>
       </div>
-      <div class="order__section">
-        <div class="condition" data-animation="fade-in-up">
-          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Der Gutschein wird direkt nach dem Kauf per E-Mail als PDF versendet.</p-text>
-        </div>
-        <div class="condition" data-animation="fade-in-up">
-          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Der Fahrer muss die Mindestanforderungen erfüllen.</p-text>
-        </div>
-        <div class="condition" data-animation="fade-in-up">
-          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Gutscheine sind an allen Porsche Drive Rental Standorten in Deutschland einlösbar.</p-text>
-        </div>
-        <div class="condition" data-animation="fade-in-up">
-          <p-icon name="check" aria="{ 'aria-label': 'Check icon' }" theme="dark"></p-icon><p-text theme="dark">Der Gutschein ist drei Jahre ab Ende des Kalenderjahres gültig.</p-text>
-        </div>
-      </div>
+      <ul class="order__section">
+        <li class="condition" data-animation="fade-in-up">
+          <p-icon name="check" theme="dark"></p-icon><p-text theme="dark" tag="span">Der Gutschein wird direkt nach dem Kauf per E-Mail als PDF versendet.</p-text>
+        </li>
+        <li class="condition" data-animation="fade-in-up">
+          <p-icon name="check" theme="dark"></p-icon><p-text theme="dark" tag="span">Der Fahrer muss die Mindestanforderungen erfüllen.</p-text>
+        </li>
+        <li class="condition" data-animation="fade-in-up">
+          <p-icon name="check" theme="dark"></p-icon><p-text theme="dark" tag="span">Gutscheine sind an allen Porsche Drive Rental Standorten in Deutschland einlösbar.</p-text>
+        </li>
+        <li class="condition" data-animation="fade-in-up">
+          <p-icon name="check" theme="dark"></p-icon><p-text theme="dark" tag="span">Der Gutschein ist drei Jahre ab Ende des Kalenderjahres gültig.</p-text>
+        </li>
+      </ul>
       <div class="order__section submit">
         <p-button theme="dark" id="order-button">Gutschein bestellen</p-button>
         <a href="/">Mehr Erfahren</a>
@@ -120,15 +120,15 @@
       <p-heading size="large" tag="h2" id="redeem-heading" align="center">Gutschein einlösen</p-heading>
       <div class="redeem__container">
         <div class="redeem__step" data-animation="fade-in-up">
-          <p-icon name="car" size="large" aria="{ 'aria-label': 'Car icon' }"></p-icon>
+          <p-icon name="car" size="large"></p-icon>
           <p-text align="center">Wunschfahrzeug einfach<br />online reservieren</p-text>
         </div>
         <div class="redeem__step" data-animation="fade-in-up">
-          <p-icon name="purchase" size="large" aria="{ 'aria-label': 'Purchase icon' }"></p-icon>
+          <p-icon name="purchase" size="large"></p-icon>
           <p-text align="center">Gutscheincode bei<br />Fahrantritt angeben</p-text>
         </div>
         <div class="redeem__step" data-animation="fade-in-up">
-          <p-icon name="refresh" size="large" aria="{ 'aria-label': 'Refresh icon' }"></p-icon>
+          <p-icon name="refresh" size="large"></p-icon>
           <p-text align="center">Restguthaben für spätere<br />Buchungen verwenden</p-text>
         </div>
       </div>
