--- a/src/drive-homepage/index.html
+++ b/src/drive-homepage/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Porsche Drive – Made by Dreamers, for Dreamers."/>
-  <title>Porsche Drive (Pattern)</title>
+  <title>Porsche Drive (Template)</title>
   <script type="module" src="//nav.porsche.com/00BC524/porsche-navigation.esm.js"></script>
   <link rel="stylesheet" href="https://nav.porsche.com/00BC524/porsche-navigation.css"/>
 </head>
