--- a/src/shop-homepage/index.html
+++ b/src/shop-homepage/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Porsche Shop – Made by Dreamers, for Dreamers."/>
-  <title>Porsche Shop (Pattern)</title>
+  <title>Porsche Shop (Template)</title>
 </head>
 <body>
 <div id="app">
