fix: a11y issues | oh

--- a/src/co-driver/index.html
+++ b/src/co-driver/index.html
@@ -106,7 +106,7 @@
       </div>
       <div class="controls__item">
         <button title="Internal Configurator">
-          <img src="assets/c.webp" width="384" height="384" alt="Internal Configurator"/>
+          <img src="assets/c.webp" width="384" height="384" alt=""/>
           <span>Internal Configurator</span>
         </button>
         <div class="controls__group">
@@ -132,7 +132,7 @@
       </div>
       <div class="controls__item">
         <button title="Consumption Disclaimer Bot">
-          <img src="assets/world.webp" width="384" height="384" alt="Consumption Disclaimer Bot"/>
+          <img src="assets/world.webp" width="384" height="384" alt=""/>
           <span>Consumption Disclaimer Bot</span>
         </button>
         <div class="controls__group">
@@ -167,7 +167,7 @@
     </p-button-pure
     >
 
-    <p-heading class="-mt-fluid-large" size="small">Last topics</p-heading>
+    <p-heading class="-mt-fluid-large" size="small" tag="h3">Last topics</p-heading>
 
     <div class="controls -mt-fluid-small">
       <div class="controls__item controls__item--active">
